--- a/6 - Futsal Semanal 2023/notebooks/00_package_versions.ipynb
+++ b/6 - Futsal Semanal 2023/notebooks/00_package_versions.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"font-family: Montserrat; color:#02231C; background-color:#C7F6EC;\">\n",
+    "<div style=\"font-family: Montserrat; color:#41210A; background-color:#EBCFA7;\">\n",
     "\n",
-    "## <p style=\"background-color:#02231C; font-family:Montserrat; color:#55D9C0; font-size:150%; text-align:left; margin-bottom: 0px; padding-left: 75px;\"><strong>VERSIONS OF THE MAIN PACKAGES</strong></p>\n",
+    "## <p style=\"background-color:#41210A; font-family:Montserrat; color:#FBB03B; font-size:150%; text-align:left; margin-bottom: 0px; padding-left: 75px;\"><strong>VERSIONS OF THE MAIN PACKAGES</strong></p>\n",
     "    \n",
     "\n",
     "- **Versions of the main packages used in this project for its replicability**"
